* When running configure with --with-distcheck, don't check that the supplied
  user name and init.d directories exist (for packagers).

* Test for bzip2, tar, gzip, wget and gpg on startup.

Changes since 0.1.21:

* Use --bzip2 option to tar rather than -j to support older versions
  (agsb).

* Errors from wget are now logged.

Changes since 0.1.20:

* More helpful error message when an index is incorrectly signed (reported
  by Jeffrey Templon).

* Moved 'Linux' subdirectory to its own module, allowing for separate
  development.

* Subsites are now supported. Give the host as, eg, "my.domain#~user" to
  0build. This will fetch the index from http://my.domain/~user/...

Changes since 0.1.19:

* Give files user write permission by default (doesn't do anything, since fs is
  mounted read-only, but means that things don't end up read-only after
  copying).

* --nodaemon flag to prevent backgrounding (requested by Joachim Kupke).

* Before forking, send errors to stderr (in addition to syslog).

* Set SHELL in init.d/0install, so that it works during booting.

Changes since 0.1.18:

* Use 'su -p -c' instead of 'su -s'. Some systems don't have -s (reported by
  Sampo Vuori).

* Updated to use D-BUS 0.2 API.

* Send better error messages to ZeroProgress.

Changes since 0.1.17:

* Don't compile with -Werror (header files on some systems generate warnings).
  Get rid of compiler warning about an unsigned comparision (reported by 
  Stephen Watson).

* Allow downloads to be cancelled.

* Send errors (to ZeroProgress, etc) when a kernel request fails.

* Configure check for missing expat.h.

* Fixed some cases of using GFP_KERNEL with a spinlock held (reported by
  Tristan).

* Use new index.tar.bz2 file. Only fetch index.xml file if actually needed.

Changes since 0.1.16:

* Support for Linux 2.6 (tested with 2.6.0-pre7).

* New mirrors.xml file supplied in the initial archive.
  This will allow the index to be downloaded separately, although at present